Fixed spacing of headers, started refactoring towards using more u-classes

--- a/app/css/components/comparison-table.scss
+++ b/app/css/components/comparison-table.scss
@@ -1,9 +1,5 @@
-.comparison-table {
-  width: 100%;
-}
-
 .comparison-table__heading {
-  padding: $space-small;
+  padding: $space-medium;
   font-family: $font-family-heading;
   color: $black-blue-invert;
   background-color: $primary-color;
